fix: Now will properly all maintenances parts when fetching via list-all endpoint
