# api/infra/http/controllers/car-controller/car-endpoints/get-all-cars.go
@@ -22,26 +22,26 @@ import (
 // @Success 200 {array} dtos.CarOutputDTO "List of cars"
 // @Failure				422					{array}		validation_errors.HTTPError
 // @Router /api/v1/cars [get]
-func GetAllCarsController(context *gin.Context,carRepository repositories.CarRepository,specificationRepository repositories.SpecificationRepository) {
+func GetAllCarsController(context *gin.Context, carRepository repositories.CarRepository, specificationRepository repositories.SpecificationRepository) {
 
 	pageStr := context.Query("page")
 	pageSizeStr := context.Query("pageSize")
-	
+
 	page, err := strconv.Atoi(pageStr)
 	if err != nil {
-			validation_errors.NewError(context, http.StatusBadRequest, errors.New("invalid 'page' value"))
-			return
+		validation_errors.NewError(context, http.StatusBadRequest, errors.New("invalid 'page' value"))
+		return
 	}
-	
+
 	pageSize, err := strconv.Atoi(pageSizeStr)
 	if err != nil {
-			validation_errors.NewError(context, http.StatusBadRequest, errors.New("invalid 'pageSize' value"))
-			return
+		validation_errors.NewError(context, http.StatusBadRequest, errors.New("invalid 'pageSize' value"))
+		return
 	}
-	
+
 	findAllCarsUseCase := *usecases.NewGetAllCarsUseCase(carRepository, specificationRepository)
 
-	car, err := findAllCarsUseCase.Execute(page, pageSize) 
+	car, err := findAllCarsUseCase.Execute(page, pageSize)
 	if err != nil {
 		validation_errors.NewError(context, http.StatusUnprocessableEntity, err)
 		return
