# api/infra/http/controllers/maintenance-controller/maintenance-endpoints/get-all-maintenances-controller.go
@@ -1,10 +1,13 @@
 package maintenanceendpoints
 
 import (
+	"errors"
 	"net/http"
+	"strconv"
 
 	"github.com/Marcosxx1/Car-Rent-gin-golang-/api/application/repositories"
 	usecases "github.com/Marcosxx1/Car-Rent-gin-golang-/api/application/use-cases/maintenance-use-cases"
+	"github.com/Marcosxx1/Car-Rent-gin-golang-/api/infra/validation_errors"
 	"github.com/gin-gonic/gin"
 )
 
@@ -15,14 +18,31 @@ import (
 // @Tags                Maintenance
 // @Accept              json
 // @Produce             json
+// @Param page query int false "Page number (default is 1)"
+// @Param pageSize query int false "Number of items per page (default is 10)"
 // @Success             200          {array}    maintenancedtos.MaintenanceOutputDTO "List of maintenance records"
 // @Failure             404          {object}   validation_errors.HTTPErrorCar
 // @Router              /api/v1/maintenance/maintenances [get]
 func ListMaintenanceController(context *gin.Context, maintenanceRepository repositories.MaintenanceRepository) {
 
+	pageStr := context.Query("page")
+	pageSizeStr := context.Query("pageSize")
+
+	page, err := strconv.Atoi(pageStr)
+	if err != nil {
+		validation_errors.NewError(context, http.StatusBadRequest, errors.New("invalid 'page' value"))
+		return
+	}
+
+	pageSize, err := strconv.Atoi(pageSizeStr)
+	if err != nil {
+		validation_errors.NewError(context, http.StatusBadRequest, errors.New("invalid 'pageSize' value"))
+		return
+	}
+
 	listMaintenanceUseCase := usecases.NewListMaintenanceUseCase(maintenanceRepository)
 
-	maintenanceList, err := listMaintenanceUseCase.Execute()
+	maintenanceList, err := listMaintenanceUseCase.Execute(page, pageSize)
 	if err != nil {
 		context.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
 		return
