# api/infra/http/docs/swagger.json
@@ -375,6 +375,20 @@
                 ],
                 "summary": "Retrieve a list of maintenance records",
                 "operationId": "get-maintenance-list",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Page number (default is 1)",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Number of items per page (default is 10)",
+                        "name": "pageSize",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "List of maintenance records",
